# JC4880P443C_BSP

./: .gitignore  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults
JC4880P443C_BSP/: CMakeLists.txt  JC4880P443C_BSP.c
JC4880P443C_BSP/include/bsp/: JC4880P443C_BSP.h  display.h  esp-bsp.h
common_components/: .gitignore  README.md
common_components/JC4880P443C_BSP/: CMakeLists.txt  Kconfig  README.md  bsp_board_extra.c  idf_component.yml
common_components/espressif__esp_lcd_touch_gt911/: idf_component.yml
main/: CMakeLists.txt  idf_component.yml  main.c
